manifests/apps/harbor/harbor-registry-config-job.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: harbor-registry-config
  namespace: harbor
spec:
  selector:
    matchLabels:
      app: harbor-registry-config
  template:
    metadata:
      labels:
        app: harbor-registry-config
    spec:
      serviceAccountName: harbor-registry-config
      hostPID: true
      hostNetwork: true
      containers:
      - name: pause
        image: gcr.io/google_containers/pause:3.5
      volumes:
      - name: scripts
        configMap:
          name: harbor-registry-config-script
          defaultMode: 0755
      - name: host-etc
        hostPath:
          path: /etc
          type: Directory
