manifests/apps/harbor/harbor-registry-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: harbor-registry-lb
  namespace: harbor
  annotations:
    metallb.universe.tf/address-pool: harbor-pool
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/component: registry
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/name: harbor
  ports:
  - port: 5443
    targetPort: 5443
    name: registry-tls
