manifests/apps/harbor/harbor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  namespace: harbor
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-ovh-webhook"
    haproxy.org/ssl-redirect: "true"
    haproxy.org/client-crt-optional: "false"
    haproxy.org/client-ca: "haproxy-controller/client-ca-cert"
    haproxy.org/proxy-body-size: "0"
    haproxy.org/timeout-client: "600s"
    haproxy.org/timeout-server: "600s"
spec:
  ingressClassName: haproxy
  tls:
  - hosts:
    - harbor.daddyshome.fr
    secretName: harbor-tls-cert
  rules:
  - host: harbor.daddyshome.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: harbor
            port:
              number: 80
